# DockForWindowsCodexSender

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  settings.example.json
config/: prompts.yaml  repos.example.yaml
docs/: PROJECT_CONTEXT.md  RUNBOOK.md  SECURITY.md
docs/DECISIONS/: ADR-0001-send-only-first.md
prompts/codex-thread/: initial_implementation_prompt.md
prompts/common/: send_verification_block.md  timeline_operating_context.md
prompts/kinds/: agents_update.md  bootstrap.md  fixed_io_check.md  timeline_commit_verified_changes.md  timeline_cycle_materials_export.md  timeline_next_check.md  timeline_video_fix_forward.md  ui_sync_probe.md
prompts/products/: dock_for_chatgpt.md  dock_for_windows_codex_sender.md  timeline_for_audio.md  timeline_for_chatgpt.md  timeline_for_pc.md  timeline_for_video.md  timeline_for_windows_codex.md
scripts/: bootstrap.ps1  docker-test-wsl.sh  docker-test.ps1  docker-wsl.sh  docker.ps1  smoke.ps1
src/dock_for_windows_codex_sender/: cli.py  config.py  doctor.py  models.py  render.py  runtime.py  settings.py  storage.py  transport.py
tests/: test_cli.py  test_cli_only_contract.py  test_render.py  test_runtime.py  test_transport.py
